test/corpus/comments.txt
================================================================================
Short comment
================================================================================
{{! this is a comment }}
--------------------------------------------------------------------------------

(template
  (comment))

================================================================================
Long comment
================================================================================
{{!-- this is a long comment --}}
--------------------------------------------------------------------------------

(template
  (comment
    (comment_content)))

================================================================================
Long comment with closing braces inside
================================================================================
{{!-- comment with }} inside --}}
--------------------------------------------------------------------------------

(template
  (comment
    (comment_content)))

================================================================================
Comment with whitespace control
================================================================================
{{~! trimmed comment ~}}
--------------------------------------------------------------------------------

(template
  (comment))

================================================================================
Long comment with whitespace control
================================================================================
{{~!-- trimmed long comment --~}}
--------------------------------------------------------------------------------

(template
  (comment
    (comment_content)))

================================================================================
Empty short comment
================================================================================
{{!}}
--------------------------------------------------------------------------------

(template
  (comment))

================================================================================
Comment between HTML tags
================================================================================
<p>before</p>{{! mid }}after
--------------------------------------------------------------------------------

(template
  (text)
  (comment)
  (text))

================================================================================
Long comment multiline
================================================================================
{{!--
  This is a
  multiline comment
--}}
--------------------------------------------------------------------------------

(template
  (comment
    (comment_content)))

================================================================================
Long comment with multiple closing braces
================================================================================
{{!-- }} and }} and more }} --}}
--------------------------------------------------------------------------------

(template
  (comment
    (comment_content)))

================================================================================
Long comment with triple dashes
================================================================================
{{!-- ---}}
--------------------------------------------------------------------------------

(template
  (comment
    (comment_content)))

================================================================================
Empty long comment
================================================================================
{{!----}}
--------------------------------------------------------------------------------

(template
  (comment
    (comment_content)))
