test/corpus/decorators.txt
================================================================================
Decorator
================================================================================
{{* decorator}}
--------------------------------------------------------------------------------

(template
  (decorator
    (path_expression
      (identifier))))

================================================================================
Block decorator
================================================================================
{{#* myDecorator}}content{{/myDecorator}}
--------------------------------------------------------------------------------

(template
  (block_decorator
    (block_decorator_open
      (path_expression
        (identifier)))
    (text)
    (block_close
      (path_expression
        (identifier)))))
