test/corpus/expressions.txt
================================================================================
Basic expression
================================================================================
{{name}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))))

================================================================================
Expression with dot path
================================================================================
{{person.name}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier)
      (identifier))))

================================================================================
Unescaped triple-stash
================================================================================
{{{rawContent}}}
--------------------------------------------------------------------------------

(template
  (raw_expression
    (path_expression
      (identifier))))

================================================================================
Unescaped ampersand
================================================================================
{{&content}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))))

================================================================================
Whitespace control on open
================================================================================
{{~name}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))))

================================================================================
Whitespace control on close
================================================================================
{{name~}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))))

================================================================================
Whitespace control on both
================================================================================
{{~name~}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))))

================================================================================
Helper with positional args
================================================================================
{{helper arg1 arg2}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))
    (path_expression
      (identifier))
    (path_expression
      (identifier))))

================================================================================
Helper with hash arguments
================================================================================
{{helper key="value" flag=true}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))
    (hash_pair
      (identifier)
      (string_literal))
    (hash_pair
      (identifier)
      (boolean_literal))))

================================================================================
Helper with subexpression
================================================================================
{{helper (subhelper arg)}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))
    (subexpression
      (path_expression
        (identifier))
      (path_expression
        (identifier)))))

================================================================================
Helper with mixed args
================================================================================
{{helper arg1 (sub arg2) key="val"}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))
    (path_expression
      (identifier))
    (subexpression
      (path_expression
        (identifier))
      (path_expression
        (identifier)))
    (hash_pair
      (identifier)
      (string_literal))))

================================================================================
Expression with text around it
================================================================================
Hello {{name}}, welcome!
--------------------------------------------------------------------------------

(template
  (text)
  (expression
    (path_expression
      (identifier)))
  (text))
