test/corpus/literals.txt
================================================================================
String literal double quotes
================================================================================
{{helper "text"}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))
    (string_literal)))

================================================================================
String literal single quotes
================================================================================
{{helper 'text'}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))
    (string_literal)))

================================================================================
Number integer
================================================================================
{{helper 123}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))
    (number_literal)))

================================================================================
Number decimal
================================================================================
{{helper 1.5}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))
    (number_literal)))

================================================================================
Number negative
================================================================================
{{helper -42}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))
    (number_literal)))

================================================================================
Boolean true
================================================================================
{{helper true}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))
    (boolean_literal)))

================================================================================
Boolean false
================================================================================
{{helper false}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))
    (boolean_literal)))

================================================================================
Null literal
================================================================================
{{helper null}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))
    (null_literal)))

================================================================================
Undefined literal
================================================================================
{{helper undefined}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))
    (null_literal)))

================================================================================
String with escape sequences
================================================================================
{{helper "string with \" escape"}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))
    (string_literal)))

================================================================================
String with single quote escape
================================================================================
{{helper 'it\'s escaped'}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))
    (string_literal)))
