test/corpus/partials.txt
================================================================================
Basic partial
================================================================================
{{> header}}
--------------------------------------------------------------------------------

(template
  (partial
    (path_expression
      (identifier))))

================================================================================
Partial with context
================================================================================
{{> userCard currentUser}}
--------------------------------------------------------------------------------

(template
  (partial
    (path_expression
      (identifier))
    (path_expression
      (identifier))))

================================================================================
Partial with hash
================================================================================
{{> myPartial key="value"}}
--------------------------------------------------------------------------------

(template
  (partial
    (path_expression
      (identifier))
    (hash_pair
      (identifier)
      (string_literal))))

================================================================================
Dynamic partial
================================================================================
{{> (lookup variable)}}
--------------------------------------------------------------------------------

(template
  (partial
    (subexpression
      (path_expression
        (identifier))
      (path_expression
        (identifier)))))

================================================================================
Partial block
================================================================================
{{#> layout}}fallback content{{/layout}}
--------------------------------------------------------------------------------

(template
  (partial_block
    (partial_block_open
      (path_expression
        (identifier)))
    (text)
    (block_close
      (path_expression
        (identifier)))))

================================================================================
Inline partial
================================================================================
{{#*inline "header"}}Header Content{{/inline}}
--------------------------------------------------------------------------------

(template
  (inline_partial
    (inline_partial_open
      (string_literal))
    (text)
    (block_close
      (path_expression
        (identifier)))))

================================================================================
Partial with string name
================================================================================
{{> "my-partial"}}
--------------------------------------------------------------------------------

(template
  (partial
    (string_literal)))
