test/corpus/paths.txt
================================================================================
Simple identifier
================================================================================
{{name}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))))

================================================================================
Dot path
================================================================================
{{person.name}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier)
      (identifier))))

================================================================================
Parent context
================================================================================
{{../name}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))))

================================================================================
Double parent context
================================================================================
{{../../name}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))))

================================================================================
Parent with dotted path
================================================================================
{{../../deeply.nested.prop}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier)
      (identifier)
      (identifier))))

================================================================================
This reference
================================================================================
{{this}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression)))

================================================================================
This with property
================================================================================
{{this.name}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))))

================================================================================
This deep path
================================================================================
{{this.foo.bar.baz}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier)
      (identifier)
      (identifier))))

================================================================================
Dot-slash path
================================================================================
{{./name}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))))

================================================================================
Current context shorthand
================================================================================
{{.}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression)))

================================================================================
Segment literal
================================================================================
{{object.[property-name]}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier)
      (segment_literal))))

================================================================================
Data variable
================================================================================
{{@index}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier))))

================================================================================
Data variable dotted
================================================================================
{{@root.title}}
--------------------------------------------------------------------------------

(template
  (expression
    (path_expression
      (identifier)
      (identifier))))
