test/corpus/raw_blocks.txt
================================================================================
Raw block
================================================================================
{{{{raw}}}}{{not-parsed}}{{{{/raw}}}}
--------------------------------------------------------------------------------

(template
  (raw_block
    (raw_block_open
      (identifier))
    (raw_block_content)
    (raw_block_close
      (identifier))))

================================================================================
Raw block empty
================================================================================
{{{{raw}}}}{{{{/raw}}}}
--------------------------------------------------------------------------------

(template
  (raw_block
    (raw_block_open
      (identifier))
    (raw_block_close
      (identifier))))

================================================================================
Raw block with triple-stash inside
================================================================================
{{{{raw}}}}{{{triple}}} and {{double}} and plain{{{{/raw}}}}
--------------------------------------------------------------------------------

(template
  (raw_block
    (raw_block_open
      (identifier))
    (raw_block_content)
    (raw_block_close
      (identifier))))

================================================================================
Raw block with HTML
================================================================================
{{{{raw}}}}<div class="{{not-parsed}}">hello</div>{{{{/raw}}}}
--------------------------------------------------------------------------------

(template
  (raw_block
    (raw_block_open
      (identifier))
    (raw_block_content)
    (raw_block_close
      (identifier))))
